--- a/tasks/copy_dir.yml
+++ b/tasks/copy_dir.yml
@@ -1,5 +1,5 @@
 ---
-#- debug: msg="copy_dir.yml src_file={{src_file}} dest_file={{dest_file}} backup_dir_full={{backup_dir_full}} backup_dir_partial={{backup_dir_partial}} remote_src={{remote_src}}"
+#- debug: msg="copy_dir.yml src_file={{src_file}} dest_file={{dest_file}} backup_dir_full={{backup_dir_full}} remote_src={{remote_src}}"
 
 - name: Find files to copy
   find: paths="{{src_file}}" recurse=yes
@@ -10,14 +10,13 @@
   when: not remote_src
 - set_fact:
     files_to_copy: "{{ files_to_copy1 if remote_src else files_to_copy2 }}"
-    src_file2: "{{src_file}}"
-    dest_file2: "{{dest_file}}"
-    backup_dir_partial2: "{{backup_dir_partial}}"
+    src_file2: "{{src_file|regex_replace('/$','')}}/"
+    dest_file2: "{{dest_file|regex_replace('/$','')}}/"
 
 
-#- debug: msg="calling copy_file.yml src_file={{src_file2}}{{item.path[src_file2|length:]}} dest_file={{dest_file2}}{{item.path[src_file2|length:]}} backup_dir_partial={{backup_dir_partial2}}{{item.path[src_file2|length:]}}"
+#- debug: msg="calling copy_file.yml src_file={{src_file2}}{{item.path[src_file2|length:]}} dest_file={{dest_file2}}{{item.path[src_file2|length:]}} backup_dir_partial={{item.path[src_file2|length:]}}"
 #  with_items: "{{files_to_copy.files}}"
     
-- include: copy_file.yml src_file={{src_file2}}{{item.path[src_file2|length:]}} dest_file={{dest_file2}}{{item.path[src_file2|length:]}} backup_dir_partial={{backup_dir_partial2}}{{item.path[src_file2|length:]}}
+- include: copy_file.yml src_file={{src_file2}}{{item.path[src_file2|length:]}} dest_file={{dest_file2}}{{item.path[src_file2|length:]}} backup_dir_partial={{item.path[src_file2|length:]}}
   with_items: "{{files_to_copy.files}}"
   
